force-app/main/default/objects/PGi_ServiceCatalog_Section__c/PGi_ServiceCatalog_Section__c.object-meta.xml
<CustomObject>
    <label>Section</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>