force-app/main/default/objects/PGi_ServiceCatalog_Section__c/fields/Category_Option__c.field-meta.xml
<CustomField>
    <fullName>Category_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Option</label>
    <referenceTo>PGi_ServiceCatalog_Category_Option__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>