force-app/main/default/objects/PGi_ServiceCatalog_Section__c/fields/Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_API_Name__c</fullName>
    <description>The API Name of the Field Set to display</description>
    <inlineHelpText>The API Name of the Field Set to display</inlineHelpText>
    <label>Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>