force-app/main/default/objects/PGi_ServiceCatalog_Section__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <formula>TEXT(Category_Option__r.Object_API_Name__c)</formula>
    <label>Object API Name</label>
    <type>Text</type>
</CustomField>